Practica 3/k8s/ELK/kibana/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: observability
  annotations:
    # Para que GCE Ingress use NEG
    cloud.google.com/neg: '{"ingress": true}'
    # Para que el health check sea /api/status en el puerto 5601
    cloud.google.com/backend-config: '{"ports": {"5601":"kibana-backendconfig"}}'
spec:
  selector:
    app: kibana
  ports:
  - name: http
    port: 5601
    targetPort: 5601
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.11.3
        ports:
        - containerPort: 5601
          name: http
